--- a/web/ui/package.json
+++ b/web/ui/package.json
@@ -5,9 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.3.0",
-    "@mui/material": "^5.3.0",
+    "@rsuite/icons": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "rsuite": "^5.5.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
