--- a/.github/workflows/deploy_examples.yml
+++ b/.github/workflows/deploy_examples.yml
@@ -16,7 +16,7 @@ jobs:
           heroku_app_name: "gork-worker-example"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
-          appdir: example/heroku/worker
+          appdir: example/heroku
           docker_build_args: |
             COMMAND
         env:
