--- a/example/heroku/Dockerfile
+++ b/example/heroku/Dockerfile
@@ -7,4 +7,4 @@ RUN go get github.com/B3rs/gork@main
 WORKDIR /heroku/$COMMAND
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o $COMMAND -ldflags="-w -s" .
 
-CMD exec $COMMAND
+CMD ["./$COMMAND"]
